--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port:8086
+#Monodb Configuration
+spring.data.mongodb.database=mongodemo
+#spring.data.mongodb.username=
+#spring.data.mongodb.password=
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
